--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 								<li>Studied Computer Science</li>
 								<li>Inspired by Free Software movement</p>
 								<li>Started with Drupal in 2010</li>
-								<li>Currently working at ECLAC</li>
+								<!--<li>Currently working at ECLAC</li>-->
 					</div>
 				</section>
-
+				<!--
 				<section>
 					<p>From Chile</p>
 					<p>
 					<img width="100%" height="" data-src="images/santiago_mountains.jpg" alt="montañas Santiago de Chile">
 					</p>
 				</section>
-
+				-->
 				<section>
 					<h2>Who is?</h2>
 					<p><small>@betoscopio</small></p>
