--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 							<ul>
 								<li>Ruby on Rails</li>
 								<li class="fragment">The RoR effect</p>
-								<li class="fragment">ORM, Scaffolding, Relection, "Real OOP"</li>
+								<li class="fragment">ORM, Scaffolding, Reflection, "Real OOP"</li>
 								<li class="fragment">Dozens of PHP clones</li>
 								<li class="fragment">Did somebody said hype?</li>
 							</ul>
