--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					<p>
 					<img width="100%" height="" data-src="images/santiago_mountains.jpg" alt="montañas Santiago de Chile">
 					</p>
+				</section>
 				<!--
 				<section>
 					<h2>Who is?</h2>
